Update ShoppingListServiceTest